# quickstart-examples

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  config.in.json  package.json  pyproject.toml  run-ci.py  setup.py
android/: build.gradle
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
client/android/notepad/: .gitignore  README.md  build.gradle
client/ios/notepad/: .gitignore  Podfile  README.md
client/nodejs/hello-world/: README.md  config.sample.js  main.js  package.json  persistence.js
client/web/api-observer/: README.md  package.json
client/web/config/: webpack.config.base.js
client/web/notepad/: .eslintrc  .flowconfig  .prettierrc  README.md  package.json  tutorial.patch
ios/: Podfile
ios/tanker-ui-demo/: AppDelegate.m  DeviceValidationViewController.m  Globals.h  Globals.m  GreatSuccessViewController.h  GreatSuccessViewController.m  Info.plist  LoginViewController.h  LoginViewController.m  SaveValidationViewController.m  SignUpViewController.h  SignUpViewController.m
ios/tanker-ui-demo.xcodeproj/: project.pbxproj
ios/tanker-ui-demo.xcworkspace/: contents.xcworkspacedata
javascript/server/: README.md  package.json  server.js
react/: .eslintrc  .flowconfig  .gitignore  README.md  package.json
react/public/: index.html
react/src/: Api.js  App.js  Session.js  client-config.sample.js  index.css  index.js
server/: .eslintrc  README.md  corsMiddleware.js  package.json  server-config.sample.js  server.js
server/src/: ApiClient.js  FakeApiClient.js  FakeTrustchaindClient.js  TrustchaindClient.js  auth.js  cache.js  config.js  config.sample.js  cors.js  error.js  ip.js  log.js  main.js  server.js  session.js  storage.js  users.js
server/tests/: auth.spec.js  server.spec.js  storage.spec.js
tests/: .gitignore  Pipfile  README.md  conftest.py  helpers.py  test_api_observer.py  test_notepad.py
tests/stubs/: pytest.pyi
(+298 files in other folders)
