[tool.poetry]
name = "tanker-quickstart-examples"
version = "0.1.0"
description = "Examples of Tanker application"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
ci = "2020.2.2093"

[tool.poetry.dev-dependencies]
faker = "^4.0.0"
mypy = "^0.761"
pytest = "^5.3.4"
requests = "^2.22.0"
selenium = "^3.141.0"
typing-extensions = "^3.7.4"

[[tool.poetry.source]]
name = "tanker.local"
url = "http://tanker.local:8181"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
