[tool.poetry]
name = "tanker-quickstart-examples"
version = "0.1.0"
description = "Examples of Tanker application"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = { version = ">= 2021.6.3428", source = "gitlab" }

[tool.poetry.dev-dependencies]
faker = "^4.0.0"
mypy = "^0.790"
pytest = "^6.2.1"
requests = "^2.22.0"
selenium = "^3.141.0"
typing-extensions = "^3.7.4"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
