[tool.poetry]
name = "tanker-quickstart-examples"
version = "0.1.0"
description = "Examples of Tanker application"
authors = ["Tanker team <tech@tanker.io>"]

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.7"
tankerci = { version = ">= 2021.11.3774", source = "gitlab" }

[tool.poetry.dev-dependencies]
faker = "^4.18.0"
mypy = "0.910"
pytest = "^6.2.5"
requests = "^2.26.0"
selenium = "^3.141.0"
typing-extensions = "^3.7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
